--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {%block content%}
+{%block title%} | Login{%endblock%} {% extends 'base.html' %} {%block content%}
 <section id="login" class="bg-light py-5">
   <div class="container">
     <div class="row">
@@ -8,6 +8,8 @@
             <h4><i class="fas fa-sign-in-alt"></i> Login</h4>
           </div>
           <div class="card-body">
+            <!-- Alerts -->
+            {%include 'partials/_alert.html'%}
             <form action="{% url 'login' %}" method="POST">
               {% csrf_token %}
               <div class="form-group">
