--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {%block content%}
+{%block title%} | Register{%endblock%} {% extends 'base.html' %} {%block
+content%}
 
 <section id="register" class="bg-light py-5">
   <div class="container">
@@ -9,6 +10,8 @@
             <h4><i class="fas fa-user-plus"></i> Register</h4>
           </div>
           <div class="card-body">
+            <!-- Alerts -->
+            {%include 'partials/_alert.html'%}
             <form action="{% url 'register' %}" method="POST">
               {% csrf_token %}
               <div class="form-group">
