can submit inquires

--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -1,5 +1,6 @@
-{%block title%} | Register{%endblock%} {% extends 'base.html' %} {%block
-content%}
+{% extends 'base.html' %}{%block title%} | Register{%endblock%}  
+<!--  -->
+{%block content%}
 
 <section id="register" class="bg-light py-5">
   <div class="container">
@@ -80,4 +81,4 @@ content%}
     </div>
   </div>
 </section>
-{%endblock%}
+{% endblock %}
