--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,4 +1,4 @@
-{%block title%} | Login{%endblock%} {% extends 'base.html' %} {%block content%}
+{% extends 'base.html' %}{%block title%} | Login{%endblock%}  {%block content%}
 <section id="login" class="bg-light py-5">
   <div class="container">
     <div class="row">
